# django-dynamic-models

./: .flake8  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.md  conftest.py  dynamic_models.db}  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: on-push.yaml
dynamic_models/: __init__.py  apps.py  cache.py  compat.py  config.py  exceptions.py  factory.py  fields.py  models.py  receivers.py  schema.py  signals.py  utils.py
dynamic_models/migrations/: 0001_initial.py  0002_remove_modelschema__modified.py  0003_add_classname_remove_datatype.py  0003_auto_20201219_0837.py  0003_auto_20220427_1058.py  0004_merge_20220427_1118.py  0004_modelschema_db_name.py  0005_add_model_db_name.py  0005_auto_20220605_1426.py  0005_auto_20220621_0718.py  0005_remove_fieldschema_db_name.py  0006_alter_fieldschema_id_alter_modelschema_id.py  0006_auto_20220506_1023.py  0006_modelschema_db_table_name.py
dynamic_models/tests/: models.py
dynamic_models/tests/settings/: base.py  mysql.py  postgres.py  sqlite.py
scripts/: setup_sqlite_db.py
settings/: base.py  dummy.py  mysql.py  postgres.py  sqlite.py
tests/: conftest.py  models.py  settings.py  test_cache.py  test_config.py  test_factory.py  test_models.py  test_schema_editor.py  test_utils.py
tests/migrations/: 0001_initial.py
tests/settings/: base.py  mysql.py  postgres.py
