[tool.poetry]
authors = ["Ryan Vinzent <ryan.vinzent@gmail.com>"]
description = "Dynamic Django models allow users to define, edit, and populate their own database schema."
license = "MIT License"
name = "dynamic_models"
packages = [
  {include = "dynamic_models"},
  {include = "dynamic_models/**/*.py"},
]
version = "0.4.0rc0"

[tool.poetry.dependencies]
Django = ">=2.2.24"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
psycopg2-binary = ">=2.8.6"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ["py38", "py39"]

[tool.isort]
atomic = true
combine_as_imports = true
default_section = 'THIRDPARTY'
include_trailing_comma = true
known_django = 'django'
line_length = 100
lines_after_imports = 2
multi_line_output = 3
no_lines_before = 'STDLIB'
profile = "django"
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
skip = ['.git', 'venv', 'env', '.venv']
skip_glob = ['**/migrations/**', 'manage.py']
src_paths = ['dynamic_models', 'settings', 'tests']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.postgres"
addopts = "--cov --cov-report term-missing:skip-covered"
